tests/fixtures/invalid-closures/immutable-mutable-capture.mlg
func main() {
    count := 0
    mut next := func mut() int {
        count = count + 1
        return count
    }
    print(next())
}
